--- a/views/views.xml
+++ b/views/views.xml
@@ -94,12 +94,23 @@
       <field name="arch" type="xml">
         <xpath expr="//tree" position="replace">
             <tree string="Employees" multi_edit="1" sample="1" js_class="hr_employee_list">
-                <field name="name" readonly="1" string="Name" context="{'fullname': 0}"/>
+                <field name="fullname" readonly="1" string="Name"/>
                 <field name="department_id"/>
                 <field name="job_id" string="Category"/>
                 <field name="work_location_id" optional="hide"/>
                 <field name="company_id" optional="hide"/>
             </tree>
+        </xpath>
+      </field>
+    </record>
+
+    <record model="ir.ui.view" id="hmiam_hr_kanban_view_employees">
+      <field name="name">Employee Kanban View Extended</field>
+      <field name="model">hr.employee</field>
+      <field name="inherit_id" ref="hr.hr_kanban_view_employees"/>
+      <field name="arch" type="xml">
+        <xpath expr="//field[@name='name']" position="replace">
+          <field name="fullname"/>
         </xpath>
       </field>
     </record>
